# varnish-cache

./: .gitignore  configure.ac  install-varnish.sh  restart-varnish.sh
etc/: example.vcl
include/: Makefile.am  cuckoo_table_template.h  drr.h  int_str_table.h  rr.h  uint32_void_tbl.h
include/tbl/: vsl_tags.h
lib/: Makefile.am
lib/libcuckoo/: Makefile.am  cuckoo_table_template.cc  cuckoohash_config.hh  cuckoohash_map.hh  cuckoohash_util.hh  int_str_table.cc  libcuckoo_bucket_container.hh  uint32_void_tbl.cc
lib/libdrr/: Makefile.am  cuckoo_table_template.cc  drr.c  drr_test.c
lib/libfq/: Makefile.am  drr_test  rr.c  rr_test.c
m4/: papi.m4
